--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="texto-apresentacao">
             <h1>Flex <br>Turismos</h1>
             <p>O melhor serviço para você!</p>
-            <a href="">Saiba Mais!</a>
+            <a href="" class="btn">Saiba Mais!</a>
         </div>
 
         <div>
@@ -72,15 +72,17 @@
 
     <div class="flex-container" id="planos">
 
-       <div class="list-planos">
+        <div><h2>Planos</h2></div>
+
+        <div class="list-planos">
             <div class="item-plano">
-                <h3>Plano 2</h3>
+                <h3>Plano 1</h3>
                 <ul>
                     <li>Suporte 24h</li>
                     <li>Serviços de quarto</li>
                     <li>Guia turístico</li>
                 </ul>
-                <a href="#">Saiba Mais!</a>
+                <a href="#" class="btn">Saiba Mais!</a>
             </div>
 
             <div class="item-plano">
@@ -92,7 +94,7 @@
                     <li>Roteiro de trilhas</li>
                     <li>Serviço personalizado</li>
                 </ul>
-                <a href="#">Saiba Mais!</a>
+                <a href="#" class="btn">Saiba Mais!</a>
             </div>
 
             <div class="item-plano">
@@ -105,7 +107,7 @@
                     <li>Serviço personalizado</li>
                     <li>Área Vip</li>
                 </ul>
-                <a href="#">Saiba Mais!</a>
+                <a href="#" class="btn">Saiba Mais!</a>
             </div>
        </div>
     </div>
