--- a/index.html
+++ b/index.html
@@ -87,18 +87,19 @@
 
             <div class="item-plano">
                 <h3>Plano 2</h3>
+                <br>
                 <ul>
                     <li>Suporte 24h</li>
                     <li>Serviços de quarto</li>
                     <li>Guia turístico</li>
                     <li>Roteiro de trilhas</li>
-                    <li>Serviço personalizado</li>
                 </ul>
                 <a href="#" class="btn">Saiba Mais!</a>
             </div>
 
             <div class="item-plano">
                 <h3>Plano 3</h3>
+                <br>
                 <ul>
                     <li>Suporte 24h</li>
                     <li>Serviços de quarto</li>
@@ -113,8 +114,10 @@
     </div>
 
     <footer>
-        <p>&copy; 2021 CSS Flexbox</p>
-        <p>Desenvolvido por: Seu nome aqui dev</p>
+        <div class="flex-container footer">
+            <p>&copy; 2021 CSS Flexbox</p>
+            <p>Desenvolvido por: Leonardo Dognani</p>
+        </div>
     </footer>
 </body>
 </html>
